Wokring globals and entlist, working updating bulletspeed, very accurate

--- a/ImGui DirectX 11 Kiero Hook/ImGui DirectX 11 Kiero Hook.vcxproj
+++ b/ImGui DirectX 11 Kiero Hook/ImGui DirectX 11 Kiero Hook.vcxproj
@@ -187,6 +187,7 @@
     <ClInclude Include="..\..\..\Cs2Dumper\output\buttons.hpp" />
     <ClInclude Include="Aimbot.h" />
     <ClInclude Include="AntiAim.h" />
+    <ClInclude Include="CCitadelBulletManager.h" />
     <ClInclude Include="chams.h" />
     <ClInclude Include="client_dll.hpp" />
     <ClInclude Include="Config.h" />
@@ -198,6 +199,7 @@
     <ClInclude Include="helper.h" />
     <ClInclude Include="heros.h" />
     <ClInclude Include="hooks.h" />
+    <ClInclude Include="IEngineClient.h" />
     <ClInclude Include="imgui\imconfig.h" />
     <ClInclude Include="imgui\imgui.h" />
     <ClInclude Include="imgui\imgui_impl_dx11.h" />
