--- a/ImGui DirectX 11 Kiero Hook/ImGui DirectX 11 Kiero Hook.vcxproj.filters
+++ b/ImGui DirectX 11 Kiero Hook/ImGui DirectX 11 Kiero Hook.vcxproj.filters
@@ -301,6 +301,12 @@
     <ClInclude Include="CGlobalVarsBase.h">
       <Filter>Source Files\ValveClasses</Filter>
     </ClInclude>
+    <ClInclude Include="CCitadelBulletManager.h">
+      <Filter>Source Files\ValveClasses</Filter>
+    </ClInclude>
+    <ClInclude Include="IEngineClient.h">
+      <Filter>Source Files\ValveClasses</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="kiero\minhook\dll_resources\MinHook.def">
